:bug: fix searchbar placeholder overflow

--- a/src/components/autoSuggest/autoSuggest.css
+++ b/src/components/autoSuggest/autoSuggest.css
@@ -45,7 +45,7 @@
   pointer-events: none;
   opacity: 0.5;
   padding: 0;
-  width: calc(30vw - 74px); /* stylelint-disable-line */
+  width: calc(100% - 44px);
   text-overflow: ellipsis;
 }
 
